Fixed the spacing and tried to alter lower banner, added photos.

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -32,18 +32,22 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: "Open Sans Condensed","Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-weight: 700;
+    font-family: "LeagueSpartan-Bold", "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: lighter;
 }
 
 h1{
-    font-size: 64px;
+    font-size: 55px;
 }
 
 h2{
     font-size: 40px;
 }
 
+p{
+  font-family: "Open Sans", sans-serif;
+  font-size: 12px;
+}
 span{
     font-size: 30px;
 }
@@ -54,12 +58,18 @@ li{
 
 table{
   margin-left: auto;
-    margin-right: auto;
+  margin-right: auto;
+  margin-top: 40px;
 }
+
+table p {
+  font-size: 16px;
+  font-weight: lighter;
+}
+
 td{
   text-align: center;
-  padding: 25px;
-
+  padding: 35px;
 }
 
 .topnav {
@@ -298,14 +308,16 @@ td{
 .banner {
     padding: 100px 0;
     color: #f8f8f8;
-    background: url(../img/intro-bg.jpg) no-repeat center center;
+    background: url(../img/lowerbanner.jpg) no-repeat center center;
     background-size: cover;
+
 }
 
 .banner h2 {
     margin: 0;
     text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
     font-size: 3em;
+    font-family: "Open Sans Condensed";
 }
 
 .banner ul {
